src/Components/Tooltip/Tooltip.scss
@import '../../Styles/foundation/variables.scss';

.tooltip {
  background-color: $black-90;
  border-radius: $border-radius-1;
  box-shadow: $box-shadow-1;
  color: $white;
  font-size: $font-size-6;
  max-width: $width-5;
  padding: $spacing-2;
  text-align: center;
  z-index: $z-overlay;
}

